--- a/admin.html
+++ b/admin.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin - Sistema de Adoção</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav>
